removes empty controllers & fixes modal font-size on small devices

--- a/src/shared/modal/modal-styles.scss
+++ b/src/shared/modal/modal-styles.scss
@@ -16,15 +16,23 @@
     background-color: transparentize($main-color, 0.15);
     color: white;
 
+    font-size: 1rem;
+    @media(max-width: 767px) {
+        font-size: 1.5rem;
+    }
+
     &-title {
         text-align: center;
+        font-size:2em
     }
 
     &-content {
         max-width: 500px;
+        font-size:1.2em
     }
 
     &-btn {
-        margin-top: 10px;
+        margin-top: 5px;
+        font-size: 1.2em;
     }
 }
